Add strategies for ppc64le

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,17 @@
 jobs:
 - job: linux
   pool: {vmImage: 'Ubuntu-16.04'}
+  strategy:
+    matrix:
+      x86:
+        CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
+        CIBW_MANYLINUX_I686_IMAGE: manylinux1
+        CIBW_SKIP: pp*
+      ppc64le:
+        CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+        CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+        CIBW_SKIP: cp27-manylinux*
+        CIBW_BUILD: pp*
   steps:
     - task: UsePythonVersion@0
     - bash: |
