--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
         CIBW_MANYLINUX_I686_IMAGE: manylinux2014
         CIBW_SKIP: cp27-manylinux*
         CIBW_BUILD: pp*
-  env:
+  variables:
     CIBW_MANYLINUX_X86_64_IMAGE: $(CIBW_MANYLINUX_X86_64_IMAGE)
     CIBW_MANYLINUX_I686_IMAGE: $(CIBW_MANYLINUX_I686_IMAGE)
     CIBW_SKIP: $(CIBW_SKIP)
